# Tiapyp

./: LICENSE  README.md  setup.cfg
src/Tiapyp/: __init__.py
