[metadata]
name = Tiapyp-xRadne
version = 0.0.1
author = Alexander Radne
author_email = alex.radne@gmail.com
description = This is a python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xRadne/Tiapyp
project_urls =
    Bug Tracker = https://github.com/xRadne/Tiapyp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src